archived/octoprint/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octoprint
  namespace: octoprint
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: octoprint
      app.kubernetes.io/part-of: octoprint
  replicas: 1
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: octoprint
        app.kubernetes.io/instance: octoprint
        app.kubernetes.io/component: octoprint
        app.kubernetes.io/part-of: octoprint
    spec:
      nodeSelector:
        # Biqu B1 is on crobceratops
        feature.node.kubernetes.io/usb-biqu-b1: "true"
      containers:
      - name: octoprint
        # https://hub.docker.com/r/octoprint/octoprint/tags
        # renovate: datasource=github-tags depname=OctoPrint/octoprint versioning=semver
        image: octoprint/octoprint:1.11.8
        ports:
        - containerPort: 5000
          name: http            
        securityContext:
          privileged: true
        resources:
          requests:
            memory: 512Mi
            cpu: 1000m
          limits:
            memory: 1024Mi
            cpu: 2000m
        volumeMounts:
          - mountPath: /octoprint
            name: octoprint-nfs
            readOnly: false
          - mountPath: /dev/ttyACM0
            name: ttyacm0
            readOnly: false
          - mountPath: /octoprint/config/printerProfiles/_default.profile
            name: printerprofiles
      volumes:
      - name: octoprint-nfs
        persistentVolumeClaim:
          claimName: octoprint-nfs-pvc
      - name: ttyacm0
        hostPath:
          path: /dev/serial/by-id/usb-marlinfw.org_Marlin_USB_Device_0800D001AF48A4E55D37A3EBF50020C4-if00
          type: CharDevice
      - name: printerprofiles
        configMap:
          name: biqu-b1-printerprofile
          items:
            - key: printer.profile
              path: _default.profile
