archived/octoprint/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: octoprint-service
  namespace: octoprint
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: octoprint
  type: ClusterIP
